--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "next": "13.4.2",
-    "postcss": "8.4.23",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@next-auth/prisma-adapter": "^1.0.6",
+    "@prisma/client": "^4.14.0",
+    "autoprefixer": "^10.4.14",
+    "install": "^0.13.0",
+    "next-auth": "^4.22.1",
+    "npm": "^9.6.6",
+    "postcss": "^8.4.23",
+    "prisma": "^4.14.0",
+    "tailwindcss": "^3.3.2"
   }
 }
